左侧栏初步完成

--- a/views/index/index.html
+++ b/views/index/index.html
@@ -56,7 +56,11 @@
     </div>
     
     <?php include "./views/layout/script.html"; ?>
+
     <script>
+    require(['src/index/index']);
+    </script>
+    <!-- <script>
 
         // 基于准备好的dom，初始化echarts实例
         var myChart = echarts.init(document.getElementById('main'));
@@ -84,6 +88,7 @@
         // 使用刚指定的配置项和数据显示图表。
         myChart.setOption(option);
 
-    </script>
+    </script> -->
+
 </body>
 </html>
