--- a/views/teacher/teacher_add.html
+++ b/views/teacher/teacher_add.html
@@ -21,7 +21,7 @@
                     <li class="active">讲师添加</li>
                 </ol>
                 <div class="teacher-add">
-                    <form action="" class="form-horizontal col-xs-offset-2">
+                    <form id="teacher-manage" class="form-horizontal col-xs-offset-2">
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">姓名</label>
                             <div class="col-xs-4">
@@ -62,7 +62,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-7">
-                                <a href="./advert_list.html" class="btn btn-success btn-sm pull-right"> 添 加 </a>
+                            <input type="submit" class="btn btn-success btn-sm pull-right" value=" 添 加 ">
                             </div>                          
                         </div>
                     </form>
@@ -72,7 +72,9 @@
     </div>
 
     <?php include "./views/layout/script.html"; ?>
-
+    <script>
+    require(['src/teacher/teacher-add']);
+    </script>
     
 </body>
 </html>
